--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             
             <nav id="header-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#products">Products</a></li>
-                    <li><a href="#news">News</a></li>
-                    <li><a href="#access">Access</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a class="header-list" href="#">Home</a></li>
+                    <li><a class="header-list" href="#about">About</a></li>
+                    <li><a class="header-list" href="#products">Products</a></li>
+                    <li><a class="header-list" href="#news">News</a></li>
+                    <li><a class="header-list" href="#access">Access</a></li>
+                    <li><a class="header-list" href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
