--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="main-wrapper">
         <div id="mainvisiual"></div>
-        <section id="about" class="container">
+        <section id="about" class="container effect">
 
             <h2 class="section-title">About</h2>
             <div class="contents">
@@ -61,7 +61,7 @@
         </section>
 
         <section id="products">
-            <div class="container">
+            <div class="container effect">
                 <h2 class="section-title">Products</h2>
                 <div class="contents">
                     <a href="#" class="product">
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </section>
-        <section id="news" class="container">
+        <section id="news" class="container effect">
             <h2 class="section-title">News</h2>
             <div class="contents">
                 <dl id="article">
@@ -107,7 +107,7 @@
             </div>
         </section>
         <section id="access">
-            <div class="container">
+            <div class="container effect">
                 <h2 class="section-title">Access</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.747975472316!2d139.74323885114453!3d35.658580480102366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bbd9009ec09%3A0x481a93f0d2a409dd!2z5p2x5Lqs44K_44Ov44O8!5e0!3m2!1sja!2sjp!4v1626066677801!5m2!1sja!2sjp"
@@ -138,7 +138,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact" class="container">
+        <section id="contact" class="container effect">
             <h2 class="section-title">Contact</h2>
             <div class="contents">
                 <p>店舗詳細情報などお気軽にお問い合わせください。</p>
@@ -153,7 +153,7 @@
     </div>
 
     <footer>
-        <div class="container">
+        <div class="container effect">
             <nav>
                 <ul>
                     <li class="sns-nav">
