--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
     <header>
         <div class="container">
+            <div id="header-back"></div>
             <div id="header-logo">
                 <a href="#"><img src="logo_free.png" alt="Greplaのロゴ"></a>
             </div>
